--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^6.4.7",
         "@react-spring/web": "^9.7.5"
     }
 }
