--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@emotion/styled": "^11.14.0",
         "@mui/material": "^6.4.7",
         "@react-spring/web": "^9.7.5",
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "aos": "^2.3.4"
     }
 }
