--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mui/material": "^6.4.7",
         "@react-spring/web": "^9.7.5",
         "alpinejs": "^3.14.8",
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "sweetalert2": "^11.17.2"
     }
 }
